# Web-Crawlers

./: .gitignore  BrightData-Final-Evaluation.md  BrightDataReddit.md  BrightDataTikTok.md  MAKEFILE_GUIDE.md  Makefile  README.md  RedditReport.md  RedditSerpAPI.md  Report.md  SummaryRemainingnIssues.md  TikTokFeasibility.md  TikTokReport.md  bightdata-gofundme-poc.md  brightdata-ig-poc.md  tasks.md
Instagram/: README.md  out_mrbeast  out_potus  out_roses_are_rosie  out_sooyaaa__  pyproject.toml  test.py
Reddit/: .env.example  .gitignore  ENDPOINTS.md  Makefile  README.md  get_all_endpoints.py  pyproject.toml  ruff.toml  test_public_api.py  test_setup.py
Reddit/examples/: extract_user_data.py  search_by_name.py  search_subreddits.py
Reddit/src/reddit_scraper/: __init__.py  api_client.py  models.py  rate_limiter.py  show_image_urls.py  show_json_examples.py  utils.py
Reddit/src/reddit_scraper/scrapers/: comments.py  search.py  user.py
Reddit/src/serpapi/: __init__.py  google_reddit_search.py
Reddit/tests/: test_api_client.py  test_scrapers.py
TikTok/: .env.example  TikTokHeadlessScraping.md  pyproject.toml  ruff.toml
TikTok/scripts/: benchmark_lambda.py  check_detection.py  evaluate_stealth.py
TikTok/src/tiktok_scraper/: __init__.py  config.py  stealth_config.py
TikTok/src/tiktok_scraper/scrapers/: __init__.py  hydration_scraper.py  nodriver_scraper.py  playwright_scraper.py
TikTok/src/tiktok_scraper/utils/: __init__.py  behavioral.py  fingerprint.py  proxy.py
TikTok/tests/: test_detection.py  test_proxy.py  test_scraping.py
